tests/fixtures/valid/run_for_step.lby
fn main -> i64
    let total i64 = 0
    for i from 5 to 1 by -2
        total += i
    total
