tests/fixtures/invalid/for_zero_step.lby
fn main -> i64
    for i from 1 to 3 by 0
        i
    0
